--- a/style/style.css
+++ b/style/style.css
@@ -215,6 +215,18 @@ body {
     left: 0;
     display: none;
 }
+#load {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: linear-gradient(45deg, #f0cf69, #e94879, #892bb4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
 @keyframes hide {
     from {
         transform: scale(1);
