--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,7 @@
     justify-content: center;
     align-items: center;
     color: white;
+    z-index: 999;
 }
 body {
     background: linear-gradient(45deg, #f0cf69, #e94879, #892bb4);
